--- a/full-stack.html
+++ b/full-stack.html
@@ -58,7 +58,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://the-idea-people.workable.com/j/B71B2F46F9'>The Idea People - Jobs: Senior Full Stack PHP Web Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://the-idea-people.workable.com/j/B71B2F46F9'>The Idea People - Jobs: Senior Full Stack PHP Web Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://assist-rx.workable.com/j/FE4000554C'>AssistRx - Jobs: Full Stack Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://assist-rx.workable.com/j/FE4000554C'>AssistRx - Jobs: Full Stack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -106,7 +106,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://innogy.join.com/jobs/251568-full-stack-engineer-m-f-d-for-calipsa'>Job @ innogy Innovation Hub (London): Full Stack E... | JOIN</a></h5> 
+<h5><a href='https://innogy.join.com/jobs/251568-full-stack-engineer-m-f-d-for-calipsa'>Job @ innogy Innovation Hub (London): Full Stack E... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -213,7 +213,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Vancouver Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4317023002'>Job Application for Full Stack Engineer  at Globality, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4317023002'>Job Application for Full Stack Engineer  at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -221,7 +221,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://itech.applytojob.com/apply/CGb47FE6rN/Full-Stack-Developer'>Full Stack Developer - iTech Media - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://itech.applytojob.com/apply/CGb47FE6rN/Full-Stack-Developer'>Full Stack Developer - iTech Media - Career Page</a></h5> 
 <p><span class="badge badge-light">Warsaw Warsaw, Poland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -265,7 +265,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tma-germany.join.com/jobs/257841-full-stack-developer-m-w-d'>Job @ TMA Germany jungl?ck ? (Munich): Full Stack ... | JOIN</a></h5> 
+<h5><a href='https://tma-germany.join.com/jobs/257841-full-stack-developer-m-w-d'>Job @ TMA Germany jungl?ck ? (Munich): Full Stack ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -297,7 +297,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/samsungresearchamericainternship/jobs/4274473002'>Job Application for Fall 2019 - Full Stack Software Engineer Intern at Samsung Research America Internship</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamericainternship/jobs/4274473002'>Job Application for Fall 2019 - Full Stack Software Engineer Intern at Samsung Research America Internship</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -452,7 +452,7 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1786775'>Job Application for Senior Full-Stack Engineer, Revenue &amp; Traffic at Reddit</a></h5> 
+<h5><a href='https://boards.greenhouse.io/reddit/jobs/1786775'>Job Application for Senior Full-Stack Engineer, Revenue &amp; Traffic at Reddit</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -478,7 +478,7 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
